ola-parser/src/testdata/syntaxTests/parsing/single_modifier_arg_trailing_comma.sol
contract test {
	modifier modTest(uint a,) { _; }
	fn(uint a) {}
}
// ----
// ParserError 7591: (40-41): Unexpected trailing comma in parameter list.
